# AutoPublish

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.example.yaml  pyproject.toml  tasks.example.yaml
docs/: quick-reference.md  usage.md
src/autopublish/: __init__.py  __main__.py  cli.py
